@@ -35,6 +35,9 @@
 			<li id="menu_examples_select_organisation">
 				<div>Select organisation</div>
 			</li>
+			<li id="menu_examples_display_org_names">
+				<div>Display participating-org names</div>
+			</li>
 			<li id="menu_examples_select_subarray">
 				<div>Select exploded sub array</div>
 			</li>
