@@ -1,3 +1,9 @@
+Static site (2024-01-23 shi)
+==============================
+Update dquery examples
+Add comments to dquery exmaples
+
+
 Static site (2024-01-19 shi)
 ==============================
 Update FAQ years
